--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/shaaam-ex/minecraft-server#readme",
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
     "@prisma/client": "^5.8.0",
     "bcrypt": "^5.1.1",
     "fastify": "^5.6.2",
