--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fastify/cors": "^11.2.0",
     "@prisma/client": "^5.8.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "jsonwebtoken": "^9.0.2",
     "validatorjs": "^3.22.1"
