--- a/SAMPLE.env
+++ b/SAMPLE.env
@@ -4,3 +4,6 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:xxxx/server_name?schema=s
 JWT_SECRET="your-secret-key-change-this"
 JWT_EXPIRES_IN="12h"
 SALT_ROUNDS=10
+
+# Deployment
+# pm2 start npm --name minecraft-server -- run dev
