--- a/SAMPLE.env
+++ b/SAMPLE.env
@@ -1,9 +1,16 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:xxxx/server_name?schema=schema_name"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/minecraft_server?schema=public"
 
 # Tokens
 JWT_SECRET="your-secret-key-change-this"
 JWT_EXPIRES_IN="12h"
 SALT_ROUNDS=10
+
+# Cookies
+COOKIE_SECRET="cookie-secret-here"
+COOKIE_EXPIRES_IN=43200
+
+# ENVIRONMENT
+NODE_ENV="dev"
 
 # Deployment
 # pm2 start npm --name minecraft-server -- run dev
