--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/shaaam-ex/minecraft-server#readme",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.2.0",
     "@prisma/client": "^5.8.0",
     "bcrypt": "^5.1.1",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^25.0.6",
+    "@types/node": "^25.0.7",
     "@types/validatorjs": "^3.15.5",
     "prisma": "^5.8.0",
     "tsx": "^4.21.0",
