--- a/SAMPLE.env
+++ b/SAMPLE.env
@@ -1,5 +1,8 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/minecraft_server?schema=public"
 
+# Deployment Server
+DEPLOYMENT_SERVER="http://localhost:4000"
+
 # Tokens
 JWT_SECRET="your-secret-key-change-this"
 JWT_EXPIRES_IN="12h"
