--- a/nginx.conf
+++ b/nginx.conf
@@ -47,3 +47,116 @@ http {
         }
     }
 }
+
+
+
+
+
+######################## V2 - SSL
+
+events {}
+
+http {
+
+    server {
+        server_name minecraft.cinemarque.space;
+
+        location / {
+            proxy_pass http://192.168.18.18:4173;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/minecraft.cinemarque.space/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/minecraft.cinemarque.space/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+    server {
+        server_name api.minecraft.cinemarque.space;
+
+        location / {
+            proxy_pass http://192.168.18.18:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_set_header Content-Length $content_length;
+            proxy_set_header Content-Type $content_type;
+        }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/minecraft.cinemarque.space/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/minecraft.cinemarque.space/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+    server {
+        server_name deployment.minecraft.cinemarque.space;
+
+        location / {
+            proxy_pass http://192.168.18.18:4000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/minecraft.cinemarque.space/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/minecraft.cinemarque.space/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+
+    server {
+    if ($host = minecraft.cinemarque.space) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+        listen 80;
+        server_name minecraft.cinemarque.space;
+    return 404; # managed by Certbot
+
+
+}
+
+    server {
+    if ($host = api.minecraft.cinemarque.space) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+        listen 80;
+        server_name api.minecraft.cinemarque.space;
+    return 404; # managed by Certbot
+
+
+}
+
+    server {
+    if ($host = deployment.minecraft.cinemarque.space) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+        listen 80;
+        server_name deployment.minecraft.cinemarque.space;
+    return 404; # managed by Certbot
+
+
+}}
