--- a/nginx.conf
+++ b/nginx.conf
@@ -160,3 +160,101 @@ http {
 
 
 }}
+
+
+
+######################## V3 - SSL
+
+# Default events block
+events {
+    worker_connections 768;
+}
+
+# HTTP context containing all server blocks
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    # Redirect all HTTP traffic to HTTPS
+    server {
+        listen 80;
+        server_name minecraft.cinemarque.space api.minecraft.cinemarque.space deployment.minecraft.cinemarque.space;
+
+        # Redirect everything to HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    # Minecraft frontend
+    server {
+        listen 443 ssl http2;
+        server_name minecraft.cinemarque.space;
+
+        ssl_certificate /etc/letsencrypt/live/minecraft.cinemarque.space/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/minecraft.cinemarque.space/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        location / {
+            proxy_pass http://127.0.0.1:4173;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Optional WebSocket support (if your frontend uses it)
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+    }
+
+    # API backend
+    server {
+        listen 443 ssl http2;
+        server_name api.minecraft.cinemarque.space;
+
+        ssl_certificate /etc/letsencrypt/live/minecraft.cinemarque.space/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/minecraft.cinemarque.space/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        location / {
+            proxy_pass http://127.0.0.1:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Content-Length $content_length;
+            proxy_set_header Content-Type $content_type;
+
+            # Optional WebSocket support (if your API uses it)
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+    }
+
+    # Deployment backend
+    server {
+        listen 443 ssl http2;
+        server_name deployment.minecraft.cinemarque.space;
+
+        ssl_certificate /etc/letsencrypt/live/minecraft.cinemarque.space/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/minecraft.cinemarque.space/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        location / {
+            proxy_pass http://127.0.0.1:4000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Optional WebSocket support (if your deployment uses it)
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+    }
+}
